# isbn-barcode-maker

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: barcode.rs  eps.rs  lib.rs  main.rs
src/components/: BarcodePreview.tsx
